Updated link for github website

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <head>
 </head>
 <body>
-    <a href="/gallery.html">CLICK ME</a>
+    <a href="https://willemhelmet.github.io/whp-portfolio/gallery.html">CLICK ME</a>
 </body>
 </html>
