Created landing page, finished movement nodes

--- a/gallery.html
+++ b/gallery.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Willem Helmet Pickeman | Portfolio</title>
+
         <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
         <script src="js/aframe-travel-component.min.js"></script>
-        <script src="js/aframe-lower-on-click.js"></script>
+        <!--<script src="js/aframe-lower-on-click.js"></script>-->
         <script src="js/aframe-ladder-rungs.js"></script>
+        <script src="js/aframe-travel-node-controller.js"></script>
 
     </head>
     <body>
@@ -46,47 +49,60 @@
 
             <a-sky color="black"></a-sky>
 
-            <a-entity camera look-controls wasd-controls position="0. 1.8 0">
+            <a-entity camera look-controls position="0. 1.8 0">
                 <a-cursor color="white"></a-cursor>
             </a-entity>
 
-            <a-entity id="teleportSpheres">
+            <a-entity id="teleportSpheres" travel-node-controller>
                 <a-sphere
-                    position="0 1.8 0" radius=".25" material="shader: flat; fog: false" color="#EDC34C"
+                    id="travelNode0"
+                    position="0 .5 0" radius=".25" material="shader: flat; fog: false" color="#EDC34C"
                     travel-node="transition: move; animationDur: 1000; animationEasing: easeInOutQuad"
-                    lower-on-click="index: 0"
-                    animation__down="property: position; to: 0 .5 0; startEvents: time-to-lower-0; delay: 300; dur: 100"
-                    animation__up="property: position; to: 0 1.8 0; startEvents: time-to-lower-1, time-to-lower-2; delay: 300; dur: 100">
+                    animation__down="property: position; to: 0 .5 0; startEvents: click; delay: 300; dur: 100"
+                    animation__up="property: position; to: 0 1.8 0; startEvents: up; delay: 300; dur: 100"
+                    animation__mouseenter="property: scale; to: 1.3 1.3 1.3; startEvents: mouseenter; dur: 70"
+                    animation__mouseleave="property: scale; to: 1 1 1; startEvents: mouseleave; dur: 70">
+                        <a-sphere material="shader: flat; fog: false" color="#EDC34C" scale=".1 .1 .1"></a-sphere>
                 </a-sphere>
 
                 <a-sphere 
+                    id="travelNode1"
                     position="0 1.8 -5" radius=".25" material="shader: flat; fog: false" color="#EDC34C"
                     travel-node="transition: move; animationDur: 1000; animationEasing: easeInOutQuad"
-                    lower-on-click="index: 1"
-                    animation__down="property: position; to: 0 .5 -5; startEvents: time-to-lower-1; delay: 300; dur: 100"
-                    animation__up="property: position; to 0 1.8 -5; startEvents: time-to-lower-0, time-to-lower-2, time-to-lower-3; delay 300; dur: 100" >
+                    animation__down="property: position; to: 0 .5 -5; startEvents: click; delay: 300; dur: 100"
+                    animation__up="property: position; to: 0 1.8 -5; startEvents: up; delay: 300; dur: 100"
+                    animation__mouseenter="property: scale; to: 1.3 1.3 1.3; startEvents: mouseenter; dur: 70"
+                    animation__mouseleave="property: scale; to: 1 1 1; startEvents: mouseleave; dur: 70">
                 </a-sphere>
+                
                 <a-sphere 
+                    id="travelNode2"
                     position="-3 1.8 -7" radius=".25" material="shader: flat; fog: false" color="#EDC34C"
                     travel-node="transition: move; animationDur: 1000; animationEasing: easeInOutQuad"
-                    lower-on-click="index: 2"
-                    animation__down="property: position; to: -3 .5 -7; startEvents: time-to-lower-2; delay: 300; dur: 100"
-                    animation__up="property: position; to -3 1.8 -7; startEvents: time-to-lower-0, time-to-lower-1, time-to-lower-3, time-to-lower-4; delay 300; dur: 100">
-                </a-sphere>
-                <a-sphere
-                    position="-7.2 1.8 -5.85" radius=".25" material="shader: flat; fog: false" color="#EDC34C"
-                    travel-node="transition: move; animationDur: 1000; animationEasing: easeInOutQuad"
-                    lower-on-click="index: 3"
-                    animation__down="property: position; to: -7.2 .5 -5.85; startEvents: time-to-lower-3; delay: 300; dur: 100"
-                    animation__up="property: position; to -7.2 1.8 -5.85; startEvents: time-to-lower-1; delay 300; dur: 100">
+                    animation__down="property: position; to: -3 .5 -7; startEvents: click; delay: 300; dur: 100"
+                    animation__up="property: position; to: -3 1.8 -7; startEvents: up; delay: 300; dur: 100"
+                    animation__mouseenter="property: scale; to: 1.3 1.3 1.3; startEvents: mouseenter; dur: 70"
+                    animation__mouseleave="property: scale; to: 1 1 1; startEvents: mouseleave; dur: 70">
                 </a-sphere>
 
                 <a-sphere
+                    id="travelNode3"
+                    position="-7.2 1.8 -5.85" radius=".25" material="shader: flat; fog: false" color="#EDC34C"
+                    travel-node="transition: move; animationDur: 1000; animationEasing: easeInOutQuad"
+                    animation__down="property: position; to: -7.2 .5 -5.85; startEvents: click; delay: 300; dur: 100"
+                    animation__up="property: position; to: -7.2 1.8 -5.85; startEvents: up; delay: 300; dur: 100"
+                    animation__mouseenter="property: scale; to: 1.3 1.3 1.3; startEvents: mouseenter; dur: 70"
+                    animation__mouseleave="property: scale; to: 1 1 1; startEvents: mouseleave; dur: 70">
+                </a-sphere>
+
+                <a-sphere
+                    id="travelNode4"
                     position="-7.2 1.8 -2" radius=".25" material="shader: flat; fog: false" color="#EDC34C"
                     travel-node="transition: move; animationDur: 1000; animationEasing: easeInOutQuad"
-                    lower-on-click="index: 4"
-                    animation__down="property: position; to: -7.2 .5 -2; startEvents: time-to-lower-4; delay: 300; dur: 100"
-                    animation__up="property: position; to -7.2 1.8 -2; startEvents: time-to-lower-1; delay 300; dur: 100">
+                    animation__down="property: position; to: -7.2 .5 -2; startEvents: click; delay: 300; dur: 100"
+                    animation__up="property: position; to: -7.2 1.8 -2; startEvents: up; delay: 300; dur: 100"
+                    animation__mouseenter="property: scale; to: 1.3 1.3 1.3; startEvents: mouseenter; dur: 70"
+                    animation__mouseleave="property: scale; to: 1 1 1; startEvents: mouseleave; dur: 70">
                 </a-sphere>
             </a-entity>
 
@@ -106,8 +122,8 @@
                 <a-entity id="light9" light="type: spot; angle: 35; penumbra: 1" position="-7.7357 4.78283 -7.332" rotation="-45.213 90 0"></a-entity>
                 <a-entity id="light10" light="type: spot; angle: 35; penumbra: 1" position="-7.2 4 -2" rotation="-80 180 0"></a-entity>
                 <a-entity id="light11" light="type: spot; angle: 35; penumbra: 1; distance: 9; intensity: 1.4" position="-7.80723 4.17695 -1.23762" rotation="-36 -90"></a-entity>
-
             </a-entity>
+
 
             <a-entity id="intro wall objects" position="-2.98 -.109 -1.014">
                 <a-entity id="name" position="0 2.3 0" rotation="0 90 0" scale="1.8 1.8 1" geometry="primitive: plane; height: .724; width: .968" material="src:#name_img; shader:flat">
@@ -121,6 +137,7 @@
                 </a-entity>
             </a-entity>
 
+
             <a-entity id="audi video" position="2.95 2 -5" rotation="0 -90 0">
                 <a-video src="#audi_vid" width="3.2" height="1.8">
                     <a-box position="0 0 -.021" width="3.2" height="1.8" depth=".04"></a-box>
@@ -132,6 +149,7 @@
                     <a-box position="0 0 -.021" width=".8" height=".525" depth=".04"></a-box>
                 </a-entity>
             </a-entity>
+
 
             <a-entity id="seereal video ctc" position="-9.96 2.3 -7.4" rotation="0 90 0" scale="3 3 1">
                 <a-video src="#seereal_ctc_vid" width=".332" height=".720">
@@ -145,9 +163,10 @@
                     </a-video>
             </a-entity>
 
-            <a-entity id="seereal logo" position="-9.96 2.2 -5.844" rotation="0 90 0" scale="2 2 1" geometry="primitive: plane; height: .525; width: .8" material="src:#seerealtext_img; shader: flat">
+            <a-entity id="seereal text" position="-9.96 2.2 -5.844" rotation="0 90 0" scale="2 2 1" geometry="primitive: plane; height: .525; width: .8" material="src:#seerealtext_img; shader: flat">
                     <a-box position="0 0 -.021" width=".8" height=".525" depth=".04"></a-box>
             </a-entity>
+
 
             <a-entity id="climb text" position="-4.04 2 -1.5" rotation="0 -90 0" scale="2 2 1" geometry="primitive: plane; height: .378; width: .8" material="src:#climbtext_img; shader: flat">
                     <a-box position="0 0 -.021" width=".8" height=".378" depth=".04"></a-box>
@@ -157,7 +176,6 @@
                 <a-cylinder position=".3 14 0" scale=".05 30 .05" segments-height="1" segments-radial="6" open-ended="true" material="shader: flat"></a-cylinder>
                 <a-cylinder position="-.3 14 0" scale=".05 30 .05" segments-height="1" segments-radial="6" open-ended="true" material="shader: flat"></a-cylinder>
             </a-entity>
-
 
 
             <a-entity id="room" position="-2.5 1 -15">
@@ -192,7 +210,6 @@
                         geometry="primitive: plane; width: 11; height: 4"
                         material="src:#plaster_diff; normalMap:#plaster_norm; repeat:11 4">
                     </a-entity>
-
                 </a-entity>
 
                 <a-entity id="gallery 2">
