Edited link to Resume

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="menu-outer">
         <div class="table">
             <ul id="horizontal-list">
-                <li><a href="/assets/WHPResumeMarch2019.pdf">RESUME</a></li>
+                <li><a href="https://raw.githubusercontent.com/willemhelmet/whp-portfolio/master/assets/WHPResumeMarch2019.pdf">RESUME</a></li>
                 <li><a href="gallery.html">PORTFOLIO</a></li>
                 <li><a href="mailto:willemhelmet@gmail.com">CONTACT</a></li>
             </ul>
